# x64dbg-mcp

./: .gitignore  .mcp.json  AGENTS.md  README.md
bridge-plugin/: CMakeLists.txt  bridge_plugin.cpp  bridge_plugin.h  broker.cpp  build.bat  commands.cpp  http_server.cpp  instance_file.cpp  protocol.h  util.cpp
mcp-server/: bridge_client.py  config.json  server.py  tool_registry.py
mcp-server/tests/: test_registry_and_bridge_client.py
mcp-server/web/: health.html
